# reservation_live

./: .env  Cargo.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221105061343_init.down.sql  20221105061343_init.up.sql  20221105062754_reservation.up.sql  20221105063917_reservation_trigger.down.sql  20221105063917_reservation_trigger.up.sql  20221105065024_reservation_function.up.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
rfcs/: 0001-core-reservation.md
