[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono =  "0.4"
prost = "0.11.2"
prost-types = "0.11.2"
regex = "1"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
thiserror = "1"
tonic = { version = "0.8.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.8.2"
